create threades, change Makefile

--- a/5 semester/Reflection method thread/Makefile
+++ b/5 semester/Reflection method thread/Makefile
@@ -1,5 +1,5 @@
-all: main.o getopt.o MyException.o matrix.o
-	g++ -o run main.o getopt.o MyException.o matrix.o -O3
+all: main.o getopt.o MyException.o matrix.o thread.o
+	g++ -o run main.o getopt.o MyException.o matrix.o thread.o -O3
 
 main.o: main.cpp matrix.h
 	g++ -c main.cpp -o main.o -O3
@@ -12,6 +12,9 @@ matrix.o: matrix.cpp matrix.h
 	
 getopt.o: getopt.cpp getopt.h
 	g++ -c getopt.cpp -o getopt.o -O3
+	
+thread.o: thread.cpp thread.h matrix.h
+	g++ -c thread.cpp -o thread.o -O3
 
 clean:
 	rm -f *.o run
